[FIX] sap.m.RadioButtonGroup: Compact visual issues with alignment fixed
BCP: 1670538484
CR-Id: 012003146900000787302016

--- a/src/sap.m/src/sap/m/themes/base/RadioButtonGroup.less
+++ b/src/sap.m/src/sap/m/themes/base/RadioButtonGroup.less
@@ -72,21 +72,25 @@
 }
 
 .sapMRbG[dir=rtl] .sapMRbBLabel {
-  	padding-left: 0;
+	padding-left: 0;
 	padding-right: 3rem;
 }
 
 .sapUiSizeCompact {
-  	.sapMRbG .sapMRbHasLabel .sapMRbB {
+	.sapMRbG .sapMRbHasLabel .sapMRbB {
 		width: 2rem;
 	}
 
-  	.sapMRbG .sapMRbBLabel {
+	.sapMRbG .sapMRbHasLabel .sapMRbBOut {
+		margin: 0.5rem;
+	}
+
+	.sapMRbG .sapMRbBLabel {
 		padding-left: 2rem;
 	}
 
-  	.sapMRbG[dir=rtl] .sapMRbBLabel {
-	  	padding-left: 0;
-	  	padding-right: 2rem;
+	.sapMRbG[dir=rtl] .sapMRbBLabel {
+		padding-left: 0;
+		padding-right: 2rem;
 	}
 }
